# MTechProject

./: .gitignore
robot1_controller/: setup.py
robot1_controller/launch/: robot1.launch.py
robot1_controller/robot1_controller/: mapping.py  robot_motion.py
robot_world_package/: package.xml  setup.py
robot_world_package/launch/: gazebo.launch.py
robot_world_package/models/my_robot/: model.sdf
robot_world_package/models/my_robot1/: model.sdf
robot_world_package/models/my_robot2/: model.sdf
robot_world_package/robot_world_package/: spawn_robot.py
robot_world_package/worlds/: maze.world
src/robot1_controller/: package.xml  setup.cfg  setup.py
src/robot1_controller/launch/: robot.launch.py  robot1.launch.py
src/robot1_controller/robot1_controller/: mapping.py  robot_motion.py
src/robot_controller/: package.xml  setup.py
src/robot_controller/launch/: topological_explore.launch.py
src/robot_controller/robot_controller/: robot_h_signature.py  robot_helper.py
src/robot_explorer/: package.xml  setup.cfg  setup.py
src/robot_explorer/config/: nav2_params.yaml  robot_slam.yaml
src/robot_explorer/launch/: robot_explorer.launch.py  robot_explorer2.launch.py  robot_navigation.launch.py
src/robot_frontier_explore/: CMakeLists.txt  README.md  package.xml
src/robot_frontier_explore/launch/: explore.launch.py
src/robot_planner/: CMakeLists.txt  package.xml
src/robot_planner/include/robot_planner/: costmap_client.h  obstacle_reps.h  (+1 more)
src/robot_planner/launch/: robot_planner.launch.py
src/robot_planner/src/: costmap_client.cpp  obstacle_reps.cpp  path_finder.cpp  robot_planner.cpp
src/robot_topological_explore/: CMakeLists.txt  package.xml
src/robot_topological_explore/bt_xml/: tree.xml
src/robot_topological_explore/include/robot_topological_explore/: costmap_client.h  robot.h
src/robot_topological_explore/launch/: topological_explore.launch.py
src/robot_topological_explore/src/: costmap_client.cpp  robot.cpp  topological_explore_node.cpp
src/robot_world_package/: setup.cfg  setup.py
src/robot_world_package/config/: ekf.yaml
src/robot_world_package/launch/: gazebo.launch.py  gazebo2.launch.py  gazebo_no_robots.launch.py  spawn_robots.launch.py
src/robot_world_package/robot_world_package/: spawn_robot.py
src/robot_world_package/worlds/: maze.world
src/start_exploration_pkg/: CMakeLists.txt  package.xml
src/start_exploration_pkg/launch/: start_exploration.launch.py
(+4 files in other folders)
